fix contrast + standardize color picker

--- a/src/WebFrontEnd/ClientApp/src/app/app.component.scss
+++ b/src/WebFrontEnd/ClientApp/src/app/app.component.scss
@@ -8,5 +8,5 @@
     display: flex; 
     flex: 1 0 auto;
     overflow-x: hidden;
-    background: rgb(250, 250, 250);
+    background: rgb(244, 244, 244);
 }
